styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: dosis;

}

.navbar p {
    margin-left:-50px;
    font-size: 30px;
    text-decoration: underline;
}


.navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    padding: 15px;
    background-color: #2a2826;
    color: white;
    font-weight: 600;
    font-size: 20px;
    cursor: pointer;
    
}



.navbar ul {
    list-style-type: none;
    display: flex;
    flex-direction: row;
    gap: 35px;
    padding-left: 470px;
    

}


.navbar li:hover {
    text-decoration: underline;
}

span {
    color: darkgray;
    padding: 5px;
    font-weight: 900;
}




.section-two {
    display: flex;
    flex-direction: row ;
    background-color: #2a2826;
    align-items: center;
    color: white;
    height: 100vh;
    
}


.section-two-left {
    display: flex;
    flex-direction: column;
    justify-content: start;
    width: 800px;
    height: 350px;
    padding-left: 100px;
    align-items: start;
    gap: 55px;

}

.section-two h1 {
    font-size: 48px;
    font-weight: bolder;
}

.section-two p {
    font-size: 18px;
    width: 600px;
}


.landing-page-img {
    width: 580px;
    height: 350px;
    border-radius: 10px;
    
}


#landing-btn {
    background-color: white;
    color: #2a2826;
    width: 85px;
    height: 35px;
    border: 2px solid #403d39;
    border-radius: 5px;
    cursor: pointer;
    transition: 400ms;

}





.section-three {
    height: 90vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    
}







.flexbox-image {
    width: 300px;
    height: 250px;
    cursor: pointer;

}



.section-three h2 {
    text-align: center;
    padding: 50px;
    font-size: 40px;
    font-weight: bolder;
    color: #403d39;
    margin-top: -130px;
    margin-bottom: 70px;
    text-decoration: underline;

}


.flexbox {
    display: flex;
    flex-direction: row;
    gap: 40px;
    justify-content: center;
}


.section-three p {
    text-align: center;
    padding: 10px;
    font-weight: 400;
}




.section-four {
    background-color: #e5e7eb;
    height: 50vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}


.section-four em {
    font-size: 40px;
    text-align: center;
}


.section-four p {
    text-align: end;
    font-size: 30px;
    font-weight: 200;
    padding-right: 130px;
}


.section-five {
    height: 40vh;
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


.section-five-flexbox {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    background-color: #403d39;
    width: 750px;
    height: 120px;
    border-radius: 13px;    
    color: white;

}


.section-five-flexbox #sub {
    font-weight: bold;
}


.section-five-flexbox #click {
    font-weight: 200;
}



#newsletter-btn {
    border: 2px solid white;
    background-color: #403d39;
    border-radius: 5px;
    padding: 5px;
    width: 86px;
    height: 40px;
    color: white;
    cursor: pointer;
    transition: 500ms;
    
}


#newsletter-btn:hover {
    background-color: white;
    color: #2a2826;
}


.footer {
    background-color: #2a2826;
    height: 75px;
    color: white;
    padding: 10px;
    text-align: center;
    padding-top: 25px;
}


.footer  a{ 
    color:white;

}

